--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -4,6 +4,14 @@ header {
   background: url(http://i.imgur.com/gHtD4SR.png);
   background-size: cover;
   color: white;
+  padding: 80px 0px 20px 0px;
+}
+
+h1 {
+  font-size: 70px;
   border: 2px black;
-  padding: 40px 0px 40px 0px;
+}
+h2 {
+  font-size: 45px;
+  border: 2px black;
 }
