--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,13 +5,13 @@ header {
   background-size: cover;
   color: white;
   padding: 70px 0px 10px 0px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 #project_title {
   font-size: 70px;
-  text-outline: 2px 2px black;
 }
+
 #project_tagline {
   font-size: 45px;
-  text-outline: 2px 2px black;
 }
