--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -4,7 +4,7 @@ header {
   background-size: cover;
   margin: 10px 0;
   font-weight: 700;
-  color:#222222;
+  color:#FFFFFF;
   font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
   letter-spacing: -1px;
 }
