--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -2,7 +2,7 @@ header {
   text-align: center;
   margin: 10px 0;
   font-weight: 700;
-  color: #222222;
+  background-color: #222222;
   font-family: 'Lucida Grande', 'Calibri', Helvetica, Arial, sans-serif;
   letter-spacing: -1px;
 }
