--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -55,7 +55,7 @@ html {
   box-shadow: 0px 4px #333333, 0px 10px 15px rgba(0, 0, 0, 0.2);
 }
 
-.nextlvl, .maxlvl {
+.misc, .maxlvl {
   top: 4px;
   float: left;
   width: 195px;
@@ -70,9 +70,17 @@ html {
   line-height: 40px;
   color: white;
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-  text-align: right;
   letter-spacing: 1px;
+  display: inline;
+  overflow: hidden;
+}
 
+.misc {
+  text-align: center;
+}
+
+.maxlvl {
+  text-align: right;
 }
 
 .dd select {
